# senka

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  result.csv  result_bitbank.csv  result_kava.csv  result_osmosis.csv  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: main.py
src/senka/: plugin_manager.py  senka.py  unknown_transaction.py
test/: test_plugin_manager.py  test_senka.py  test_senka_plugin.toml  test_senka_plugin_invalid.toml
test/plugin/osmosis_plugin/: osmosis_plugin.py
test/plugin/pancake_plugin/: pancake_plugin.py
test/plugin/test_one_plugin/: test_one_plugin.py
test/plugin/test_zero_plugin/: test_zero_plugin.py
