[tool.poetry]
name = "senka"
version = "0.1.1"
description = "making journal for transactions on blockchain"
authors = ["settler"]

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.28.0"
bscscan-python = "^2.0.0"
pandas = "^1.4.1"
senkalib = { git = 'https://github.com/watagori/senkalib.git', rev = '225d7d90296daec9177dba15388b34386e1cf3c2' }
osmosis_plugin = {git = 'https://github.com/watagori/osmosis_plugin.git', rev ='7b5f26b48d31d5cc7d6958580d594ccbed31a368' }
bitbank_plugin = {git = 'https://github.com/watagori/bitbank_plugin.git', rev ='366e2a5a5781fe606f88b72b8bb5c827ab40a14b' }
kava_plugin = {git = 'https://github.com/watagori/kava_plugin.git', rev ='d2b478bded34c176d98f54f887cc6534ed72bee8' }


toml = "^0.10.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pyright = "^1.1.227"
black = "^22.1.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[senka.plugin]
senka_plugin = ["osmosis_plugin", "bitbank_plugin", "kava_plugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

